fix spacing of labels

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -277,7 +277,7 @@ form > * + * {
 
 .stats-value-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   gap: 1rem;
 }
 
@@ -297,7 +297,7 @@ form > * + * {
 }
 
 .stats-section {
-  width: min(100dvw, 750px);
+  width: min(100dvw, 700px);
   h2 { margin-bottom: 2rem }
   padding: 1rem;
 }
